==================================================
Rizonesoft Notepad3 CHANGES
==================================================

--------------------------------------------------
Version 2 Build 398 (13 June 2017)
--------------------------------------------------
- Updated Scintilla to version 3.7.5
- Don't use 2nd default syntax scheme by default. (Issue #21)
- Added Microsoft Visual C++ 2017 (vc141) support.
- Bigger Toolbar Buttons (24px). Should be big enough now. (Issue #21)

--------------------------------------------------
Version 1 Build 388 (06 January 2017)
--------------------------------------------------
- Updated Scintilla to version 3.7.2
- MiniPath now works on Windows XP

--------------------------------------------------
Version 1 Build 386 (08 December 2016)
--------------------------------------------------
- Crypto Module: code cleanup 
- Crypto Module: Replaced LocalAlloc/GlobalAlloc by HeapAlloc methods.
- Integration of DeelX RegExpr engine (http://www.regexlab.com/en/deelx/) 
- Update to Scintilla 371 (NP2 adaption due to deprecated data types).
- clean-code Solution (instead of "magic numbers").
- Fixed block selecting cause crash.
- Added RaPeHoff to the contributors list.

--------------------------------------------------
Version 1 Build 350 (05 September 2016)
--------------------------------------------------
- Updated HTML Keywords
- Updated Scintilla to version 3.6.7
- Added Microsoft Visual C++ Update 3 version number

--------------------------------------------------
Version 1 Build 330 (24 June 2016)
--------------------------------------------------
- Fixed Compiler warnings
- Updated to Scintilla 3.6.6
- Updated Apache Keywords for version 2.4
- Removed Visual Studio 2010 to 2013 Support
- Added Visual Studio 2015 Update 2 version number
- Added Support for Inno Setup 5.5.9
- Fixed Favorites Function
- Updated Rizonesoft Versions Program
- Implemented a new versioning scheme