@@ -3,7 +3,7 @@
 ; Minor
 ; Maintenance: 0 - prototype, 1 - beta, 2 - release candidate, 3 - final release
 ; Build number auto increments.
-Version=1.0.2.398
+Version=2.0.2.401
 
 [Templates]
 Versions\VersionEx.h.tpl = src\VersionEx.h
