@@ -3,7 +3,7 @@
     <assemblyIdentity
         name="MiniPath"
         processorArchitecture="*"
-        version="1.0.2.131"
+        version="1.0.2.132"
         type="win32"
      />
     <description>metapath</description>
