@@ -3,7 +3,7 @@
   <assemblyIdentity
     name="Notepad3"
     processorArchitecture="*"
-    version="1.0.2.398"
+    version="2.0.2.401"
     type="win32"
   />
   <description>Notepad3</description>
