@@ -7,7 +7,7 @@
 *   Main application window functionality                                     *
 *   Based on code from Notepad2, (c) Florian Balmer 1996-2011                 *
 *                                                                             *
-*                                                  (c) Rizonesoft 2008-2016   *
+*                                                  (c) Rizonesoft 2008-2017   *
 *                                                    https://rizonesoft.com   *
 *                                                                             *
 *                                                                             *
