@@ -1,4 +1,4 @@
-#define VERSION_MAJOR 1
+#define VERSION_MAJOR 2
 #define VERSION_MINOR 0
 #define VERSION_REV 2
-#define VERSION_BUILD 398
+#define VERSION_BUILD 401
