@@ -3,6 +3,10 @@ Rizonesoft Notepad3 CHANGES
 ==================================================
 
 --------------------------------------------------
+Version 2 Build 400 (5 August 2017)
+--------------------------------------------------
+
+--------------------------------------------------
 Version 2 Build 398 (13 June 2017)
 --------------------------------------------------
 - Updated Scintilla to version 3.7.5
